leger fix